# orbital-looper

./: .gitignore  CMakeLists.txt  LICENSE  OrbitalLooper.jucer  README.md
.github/workflows/: build.yml
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: ClickPlayer.cpp  ClickPlayer.h  LoopEngine.cpp  LoopEngine.h  MasterClock.cpp  MasterClock.h
Source/UI/: LookAndFeel.cpp  LookAndFeel.h  SettingsWindow.cpp  SettingsWindow.h
